[chromium] Font fallback in cr-win is wrong for string contains zero-width-space. https://bugs.webkit.org/show_bug.cgi?id=79961

Reviewed by Adam Barth.

Source/WebCore:

Treat zero-width-space (\u200B) as true for treatAsZeroWidthSpaceInComplexScipt().

* platform/graphics/Font.h:
(WebCore::Font::treatAsZeroWidthSpaceInComplexScript):
* platform/graphics/mac/ComplexTextController.cpp:
(WebCore::ComplexTextController::adjustGlyphsAndAdvances):
* platform/graphics/win/UniscribeController.cpp:
(WebCore::UniscribeController::shapeAndPlaceItem):

LayoutTests:

* fast/text/zero-width-characters-complex-script.html:


Canonical link: https://commits.webkit.org/99092@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@111589 268f45cc-cd09-0410-ab3c-d52691b4dbfc